syntax = "proto3";

option csharp_namespace = "SoulCore.IO.Network.Relay.Global.Protos.Requests";

package SessionHandler;

message RGSSessionReserveRequest
{
		int32 Account = 1;
}
