syntax = "proto3";

import "IO/Network/Relay/World/Client/Protos/Requests/RWCSessionReserveRequest.proto";
import "IO/Network/Relay/World/Client/Protos/Responses/RWCSessionReserveResponse.proto";

option csharp_namespace = "SoulCore.IO.Network.Relay.World.Client.Protos";

service RWCSessionProto
{
    rpc Reserve (RWCSessionReserveRequest) returns (RWCSessionReserveResponse);
}
