syntax = "proto3";

option csharp_namespace = "SoulCore.IO.Network.Relay.World.Client.Protos.Requests";

message RWCSessionReserveRequest
{
    int32 Character = 1;
}
